# JadeHare

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build.yml  coverage.yml
include/: jadehare.h
include/core/math/: bounds.h  interval.h  mathematics.h  normal.h  point.h  quaternion.h  ray.h  tuple.h  vector.h
include/core/volumeScattering/: medium.h
include/util/: check.h  float.h  math.h  vecmath.h
source/: CMakeLists.txt  jadehare.cpp  main.cpp
source/core/: geometry.cpp  medium.cpp
source/core/math/: geometry.cpp
source/core/renderBackend/: HelloTriangleApplication.cpp
source/include/: jadehare.h
source/include/core/: geometry.h  medium.h
source/include/math/: geometry.h
source/include/utility/: stringprint.h
source/samples/: CMakeLists.txt
source/util/: vecmath.cpp
source/utils/: CMakeLists.txt
